A bit of cleaning

--- a/source/_posts/2009-11-11-.net-framework-profiles.md
+++ b/source/_posts/2009-11-11-.net-framework-profiles.md
@@ -4,7 +4,7 @@ author: johan
 date: 2009-11-11 14:29:15
 updated: 2009-11-11 16:44:36
 slug: .net-framework-profiles
-tags: [.NET, WF4, Visual Studio]
+tags: [.net, WF4, Visual Studio]
 ---
 
 *UPDATE 2: I have now written a [post describing how I got persistence working in WF4 beta 2](/archive/2009/11/11/persistance-in-wf4-beta-2.aspx).*
